--- a/content/resources/24-979f18.md
+++ b/content/resources/24-979f18.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: 'Alfred Stieglitz''s 1926 photograph "Equivalent #314"'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-979-topics-in-semantics-negative-polarity-items-fall-2018/d1cebf018aebbcf2b23248a8f7fa65a3_24-979f18.jpg
+file: /media/courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/d1cebf018aebbcf2b23248a8f7fa65a3_24-979f18.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'Like the clouds that simultaneously obscure and reveal the sun in Alfred
@@ -10,6 +10,8 @@ image_metadata:
     domain image courtesy of Metropolitan Museum of Art.)'
   credit: Public domain photo courtesy of the Metropolitan Museum of Art.
   image-alt: The sun shining through a layer of clouds.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 'Equivalent #314'
 uid: d1cebf01-8aeb-bcf2-b232-48a8f7fa65a3
