--- a/content/resources/mit24_979f18_lec1.md
+++ b/content/resources/mit24_979f18_lec1.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-979-topics-in-semantics-negative-polarity-items-fall-2018/3aa3e65411a4c2c3f46a2f2dc8c7d03f_MIT24_979F18_lec1.pdf
+file: /media/courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/3aa3e65411a4c2c3f46a2f2dc8c7d03f_MIT24_979F18_lec1.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24.979 Lecture 1
 uid: 3aa3e654-11a4-c2c3-f46a-2f2dc8c7d03f
