--- a/content/resources/mit24_979f18_lec10.md
+++ b/content/resources/mit24_979f18_lec10.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-979-topics-in-semantics-negative-polarity-items-fall-2018/800bba24632c35c67c50352c42efb523_MIT24_979F18_lec10.pdf
+file: /media/courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/800bba24632c35c67c50352c42efb523_MIT24_979F18_lec10.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24.979 Lecture 10
 uid: 800bba24-632c-35c6-7c50-352c42efb523
