--- a/content/resources/mit24_979f18_lec11.md
+++ b/content/resources/mit24_979f18_lec11.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-979-topics-in-semantics-negative-polarity-items-fall-2018/a32a86156f4526caa780b67d74b25747_MIT24_979F18_lec11.pdf
+file: /media/courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/a32a86156f4526caa780b67d74b25747_MIT24_979F18_lec11.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24.979 Lecture 11
 uid: a32a8615-6f45-26ca-a780-b67d74b25747
