--- a/content/resources/mit24_979f18_lec3.md
+++ b/content/resources/mit24_979f18_lec3.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-979-topics-in-semantics-negative-polarity-items-fall-2018/d507be6d76b7d74289cd0bf266e443b9_MIT24_979F18_lec3.pdf
+file: /media/courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/d507be6d76b7d74289cd0bf266e443b9_MIT24_979F18_lec3.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24.979 Lecture 3
 uid: d507be6d-76b7-d742-89cd-0bf266e443b9
