--- a/content/resources/mit24_979f18_lec6.md
+++ b/content/resources/mit24_979f18_lec6.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-979-topics-in-semantics-negative-polarity-items-fall-2018/1c66b94d46b752b1b5f4484e7ee83721_MIT24_979F18_lec6.pdf
+file: /media/courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/1c66b94d46b752b1b5f4484e7ee83721_MIT24_979F18_lec6.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24.979 Lecture 6
 uid: 1c66b94d-46b7-52b1-b5f4-484e7ee83721
