--- a/content/resources/mit24_979f18_lec7.md
+++ b/content/resources/mit24_979f18_lec7.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-979-topics-in-semantics-negative-polarity-items-fall-2018/306b11033187c38c5f056c2b6ff33700_MIT24_979F18_lec7.pdf
+file: /media/courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/306b11033187c38c5f056c2b6ff33700_MIT24_979F18_lec7.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24.979 Lecture 7
 uid: 306b1103-3187-c38c-5f05-6c2b6ff33700
