--- a/content/resources/mit24_979f18_lec8.md
+++ b/content/resources/mit24_979f18_lec8.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-979-topics-in-semantics-negative-polarity-items-fall-2018/c9dfed1095c3326b1dbb90327cfed120_MIT24_979F18_lec8.pdf
+file: /media/courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/c9dfed1095c3326b1dbb90327cfed120_MIT24_979F18_lec8.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24.979 Lecture 8
 uid: c9dfed10-95c3-326b-1dbb-90327cfed120
