--- a/content/resources/mit24_979f18_lec9.md
+++ b/content/resources/mit24_979f18_lec9.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/24-979-topics-in-semantics-negative-polarity-items-fall-2018/bdc1ffa7a1739e5ffa30eca024aac8be_MIT24_979F18_lec9.pdf
+file: /media/courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/bdc1ffa7a1739e5ffa30eca024aac8be_MIT24_979F18_lec9.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: 24.979 Lecture 9
 uid: bdc1ffa7-a173-9e5f-fa30-eca024aac8be
