Sync all content

--- a/content/resources/mit24_979f18_lec1.md
+++ b/content/resources/mit24_979f18_lec1.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 717cc84f-ba0d-3084-6d8f-6cb59fe43c68
 resourcetype: Document
 title: 24.979 Lecture 1
 uid: 3aa3e654-11a4-c2c3-f46a-2f2dc8c7d03f
