--- a/content/resources/mit24_979f18_lec10.md
+++ b/content/resources/mit24_979f18_lec10.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 717cc84f-ba0d-3084-6d8f-6cb59fe43c68
 resourcetype: Document
 title: 24.979 Lecture 10
 uid: 800bba24-632c-35c6-7c50-352c42efb523
