--- a/content/resources/mit24_979f18_lec4.md
+++ b/content/resources/mit24_979f18_lec4.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 717cc84f-ba0d-3084-6d8f-6cb59fe43c68
 resourcetype: Document
 title: 24.979 Lecture 4
 uid: 1f2f3d77-8bea-8c3f-a8f0-e133450ac205
