--- a/content/resources/mit24_979f18_lec9.md
+++ b/content/resources/mit24_979f18_lec9.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: 717cc84f-ba0d-3084-6d8f-6cb59fe43c68
 resourcetype: Document
 title: 24.979 Lecture 9
 uid: bdc1ffa7-a173-9e5f-fa30-eca024aac8be
