--- a/content/resources/24-979f18-th.md
+++ b/content/resources/24-979f18-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: 'A close-up of Alfred Stieglitz''s 1926 photograph "Equivalent #314"'
-file: /media/courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/0369526be92eea446de0b51b488ab27b_24-979f18-th.jpg
+file: /courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/0369526be92eea446de0b51b488ab27b_24-979f18-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'Like the clouds that simultaneously obscure and reveal the sun in Alfred
@@ -16,3 +16,5 @@ resourcetype: Image
 title: '"Equivalent #314" thumbnail'
 uid: 0369526b-e92e-ea44-6de0-b51b488ab27b
 ---
+A close-up of Alfred Stieglitz's 1926 photograph "Equivalent #314"
+
