--- a/content/resources/24-979f18.md
+++ b/content/resources/24-979f18.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: 'Alfred Stieglitz''s 1926 photograph "Equivalent #314"'
-file: /media/courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/d1cebf018aebbcf2b23248a8f7fa65a3_24-979f18.jpg
+file: /courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/d1cebf018aebbcf2b23248a8f7fa65a3_24-979f18.jpg
 file_type: image/jpeg
 image_metadata:
   caption: 'Like the clouds that simultaneously obscure and reveal the sun in Alfred
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 'Equivalent #314'
 uid: d1cebf01-8aeb-bcf2-b232-48a8f7fa65a3
 ---
+Alfred Stieglitz's 1926 photograph "Equivalent #314"
+
