Sync all content

--- a/content/resources/24-979f18-th.md
+++ b/content/resources/24-979f18-th.md
@@ -11,10 +11,10 @@ image_metadata:
   credit: Public domain image courtesy of Metropolitan Museum of Art.
   image-alt: The sun shining through a layer of clouds.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: '"Equivalent #314" thumbnail'
 uid: 0369526b-e92e-ea44-6de0-b51b488ab27b
 ---
 A close-up of Alfred Stieglitz's 1926 photograph "Equivalent #314"
-
