--- a/content/resources/24-979f18.md
+++ b/content/resources/24-979f18.md
@@ -11,10 +11,10 @@ image_metadata:
   credit: Public domain photo courtesy of the Metropolitan Museum of Art.
   image-alt: The sun shining through a layer of clouds.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 'Equivalent #314'
 uid: d1cebf01-8aeb-bcf2-b232-48a8f7fa65a3
 ---
 Alfred Stieglitz's 1926 photograph "Equivalent #314"
-
