--- a/content/resources/24-979f18-th.md
+++ b/content/resources/24-979f18-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: 'A close-up of Alfred Stieglitz''s 1926 photograph "Equivalent #314"'
 file: /courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/0369526be92eea446de0b51b488ab27b_24-979f18-th.jpg
+file_size: 3062
 file_type: image/jpeg
 image_metadata:
   caption: 'Like the clouds that simultaneously obscure and reveal the sun in Alfred
