--- a/content/resources/24-979f18.md
+++ b/content/resources/24-979f18.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: 'Alfred Stieglitz''s 1926 photograph "Equivalent #314"'
 file: /courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/d1cebf018aebbcf2b23248a8f7fa65a3_24-979f18.jpg
+file_size: 23127
 file_type: image/jpeg
 image_metadata:
   caption: 'Like the clouds that simultaneously obscure and reveal the sun in Alfred
