--- a/content/resources/mit24_979f18_lec10.md
+++ b/content/resources/mit24_979f18_lec10.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/800bba24632c35c67c50352c42efb523_MIT24_979F18_lec10.pdf
+file_size: 305246
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
