--- a/content/resources/mit24_979f18_lec12.md
+++ b/content/resources/mit24_979f18_lec12.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/e8285b037c0cdfc4fbed573248629480_MIT24_979F18_lec12.pdf
+file_size: 231339
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
