--- a/content/resources/mit24_979f18_lec4.md
+++ b/content/resources/mit24_979f18_lec4.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/1f2f3d778bea8c3fa8f0e133450ac205_MIT24_979F18_lec4.pdf
+file_size: 266310
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
