--- a/content/resources/mit24_979f18_lec5.md
+++ b/content/resources/mit24_979f18_lec5.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/fe9d5476c28752bd03c19bd0e0661c69_MIT24_979F18_lec5.pdf
+file_size: 223657
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
