--- a/content/resources/mit24_979f18_lec6.md
+++ b/content/resources/mit24_979f18_lec6.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/1c66b94d46b752b1b5f4484e7ee83721_MIT24_979F18_lec6.pdf
+file_size: 218389
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
