--- a/content/resources/mit24_979f18_lec7.md
+++ b/content/resources/mit24_979f18_lec7.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/306b11033187c38c5f056c2b6ff33700_MIT24_979F18_lec7.pdf
+file_size: 255942
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
