--- a/content/resources/mit24_979f18_lec8.md
+++ b/content/resources/mit24_979f18_lec8.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/24-979-topics-in-semantics-negative-polarity-items-fall-2018/c9dfed1095c3326b1dbb90327cfed120_MIT24_979F18_lec8.pdf
+file_size: 256114
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
